--- a/TigerLook.html
+++ b/TigerLook.html
@@ -1,7 +1,7 @@
 <head>
     <!-- BOOTSTRAP -->
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="bootstrap.min.css">
 
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
@@ -12,16 +12,27 @@
 </head>
 
 <body>
-  <h1>Tigerlook</h1>
-    <ul>
-        {{#each faces}}
-            {{> face}}
-        {{/each}}
-    </ul>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 text-center">
+                <h1>Tigerlook</h1>
+            </div>
+        </div>
+        <div class="row">
+            <ul>
+                {{#each faces}}
+                    {{> face}}
+                {{/each}}
+            </ul>
+        </div>
+    </div>
 </body>
 
 <template name="face">
-    <li>
-        <img src={{src}}>
-    </li>
+    <div class="card col-xs-2">
+        <img class="card-img-top" src={{src}}>
+        <div class="card-block">
+            <h4 class="card-title">{{name}}</h4>
+        </div>
+    </div>
 </template>
