remove all the bending powers

--- a/client/face.html
+++ b/client/face.html
@@ -1,5 +1,5 @@
 <template name="face">
-    <div class="card col-xs-2">
+    <div class="card">
         <img class="card-img-top" src={{src}}>
         <div class="card-block">
             <h4 class="card-title">{{name}}</h4>
