--- a/client/home.html
+++ b/client/home.html
@@ -1,6 +1,6 @@
 <template name="home">
     <div class="row">
-        <ul>
+        <ul class="cards-list">
             {{#each faces}}
                 {{> face}}
             {{/each}}
