Dynamic face changing

--- a/client/face.html
+++ b/client/face.html
@@ -1,6 +1,6 @@
 <template name="face">
-    <div class="card">
-        <img class="card-img-top" src={{src}}>
+    <div class="card clickable_face">
+        <img class="card-img-top" src={{lnk}}>
         <div class="card-block">
             <h4 class="card-title">{{name}}</h4>
         </div>
