--- a/client/face.html
+++ b/client/face.html
@@ -1,6 +1,6 @@
 <template name="face">
     <div class="card clickable_face">
-        <img class="card-img-top" src={{lnk}}>
+        <img class="card-img-top" src={{_id}}>
         <div class="card-block">
             <h4 class="card-title">{{name}}</h4>
         </div>
