--- a/client/home.html
+++ b/client/home.html
@@ -15,4 +15,9 @@
 			</div>
 		</div>
 	</div>
+	<div class="row">
+		<div class="col-xs-12">
+			<button type="button" class="btn btn-primary center-block">Start Over</button>
+		</div>
+	</div>
 </template>
